# emission-factor-pipeline

./: .clineignore  README.md  main.py  pyproject.toml
.clinerules/: caveman.md  ponytail.md  project_rules.md  pythonic.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: etl_pipeline.yml
